--- a/notebooks/outlier_detection.ipynb
+++ b/notebooks/outlier_detection.ipynb
@@ -577,7 +577,7 @@
     "# Returns True if any value in the series is null\n",
     "print(customers.columns[customers.isna().any()])\n",
     "\n",
-    "# Give me the rows where their \"plan_name\" is null\n",
+    "# Drop the rows where their \"plan_name\" is null\n",
     "customers[customers[\"plan_name\"].isna()]"
    ]
   },
