--- a/notebooks/outlier_detection.ipynb
+++ b/notebooks/outlier_detection.ipynb
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1202,7 @@
    ],
    "source": [
     "# Use LOF function from src/utils.py and output list of members as outliers\n",
-    "lof_outliers = lof_outlier_detection(customers, financial_cols)    # NOT WORKING PROPERLY\n",
+    "lof_outliers = lof_outlier_detection(customers, financial_cols)\n",
     "\n",
     "outlier_df = customers.iloc[lof_outliers]\n",
     "print(outlier_df)"
@@ -1212,7 +1212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### LOF Box PLot"
+    "#### LOF Scatter  PLot"
    ]
   },
   {
@@ -1319,7 +1319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Isolation Forest Box Plot"
+    "#### Isolation Forest Scatter Plot"
    ]
   },
   {
