touching up conclusions

--- a/notebooks/outlier_detection.ipynb
+++ b/notebooks/outlier_detection.ipynb
@@ -3236,60 +3236,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  plan_name pbp_group line_of_business  premium_to_risk\n",
-      "8569   MEDICARE - CARENEEDS     D-SNP              HMO    253768.000000\n",
-      "4154    MEDICARE - CAREFREE   NON-SNP              HMO      1350.980080\n",
-      "2800    MEDICARE - CAREFREE   NON-SNP              HMO      1043.510345\n",
-      "1513    MEDICARE - CAREFREE   NON-SNP              HMO      1067.846416\n",
-      "10223               Unknown   NON-SNP              HMO      1546.721311\n",
-      "1353    MEDICARE - CAREFREE   NON-SNP              HMO       977.393617\n",
-      "5104    MEDICARE - CAREFREE   NON-SNP              HMO       872.548969\n",
-      "5041    MEDICARE - CAREFREE   NON-SNP              HMO       978.448513\n",
-      "4186    MEDICARE - CAREFREE   NON-SNP              HMO       892.124434\n",
-      "3070    MEDICARE - CAREFREE   NON-SNP              HMO       387.523596\n"
+      "                  plan_name pbp_group  premium_to_risk\n",
+      "8569   MEDICARE - CARENEEDS     D-SNP    253768.000000\n",
+      "4154    MEDICARE - CAREFREE   NON-SNP      1350.980080\n",
+      "2800    MEDICARE - CAREFREE   NON-SNP      1043.510345\n",
+      "1513    MEDICARE - CAREFREE   NON-SNP      1067.846416\n",
+      "10223               Unknown   NON-SNP      1546.721311\n",
+      "1353    MEDICARE - CAREFREE   NON-SNP       977.393617\n",
+      "5104    MEDICARE - CAREFREE   NON-SNP       872.548969\n",
+      "5041    MEDICARE - CAREFREE   NON-SNP       978.448513\n",
+      "4186    MEDICARE - CAREFREE   NON-SNP       892.124434\n",
+      "3070    MEDICARE - CAREFREE   NON-SNP       387.523596\n"
      ]
     }
    ],
    "source": [
-    "print(asc_common_outliers[['plan_name','pbp_group','line_of_business', 'premium_to_risk']].head(10))"
+    "print(asc_common_outliers[['plan_name','pbp_group', 'premium_to_risk']].head(10))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that all the members in the common outliers are HMO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "180\n"
-     ]
-    }
-   ],
-   "source": [
-    "print((common_outliers_df['line_of_business'] == 'HMO').sum())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In fact, **every** member in the common outlier set is HMO!"
+    "~~It seems that all the members in the common outliers are HMO~~ The entire dataset is HMO"
    ]
   },
   {
@@ -3434,7 +3410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ones that are high risk are mostly D-SNP and ones that are low risk are NON-SNP"
+    "It looks like the ones that are high risk are mostly D-SNP and ones that are low risk are NON-SNP"
    ]
   },
   {
@@ -3531,6 +3507,13 @@
    ],
    "source": [
     "asc_common_outliers[['age', 'prof']].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although the average age is higher, it shouldn't imply that all of them must pay higher premiums. Premiums should reflect their risk-score"
    ]
   },
   {
