fixed up conclusion

--- a/notebooks/outlier_detection.ipynb
+++ b/notebooks/outlier_detection.ipynb
@@ -1340,7 +1340,11 @@
     "- Help detect members with disproportionate premium contributions\n",
     "    \n",
     "**payment_to_age** = $\\frac{\\text{plan\\_premium}}{\\text{age}}$  \n",
-    "- Members might be paying more/less based on how old they are"
+    "- Members might be paying more/less based on how old they are\n",
+    "\n",
+    "Added later:\n",
+    "**premium_to_risk** = $\\frac{\\text{ma\\_premium}}{\\text{ma\\_risk\\_score}}$\n",
+    "- Ratio of how much members are paying in premiums with respect to their risk score"
    ]
   },
   {
@@ -1670,6 +1674,7 @@
     "**reinsurance** (Reinsurance Payments)  \n",
     "**rx** (Prescription Drug Cost)  \n",
     "- The total cost associated with prescription drugs, including expenses paid by Medicare, insurers, and beneficiaries.  \n",
+    "\n",
     "**spec_cap** (Specialist Capitation)  \n",
     "**funding_to_premium** (Funding-to-Premium Ratio)  \n",
     "**ma_premium_share** (Medicare Advantage Premium Share)  "
@@ -4157,9 +4162,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Things noticed: NON-SNP clients have a significantly higher rx average (56k) vs (22k) and their rx_to_premium ratio is 3.6 vs 1.1  \n",
+    "## LOF/ISO Combination Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Things noticed:  \n",
+    "NON-SNP clients have a significantly higher rx average (56k) compared to D-SNP clients (22k) and their rx_to_premium ratio is 3.6 vs 1.1, respectively.\n",
     "\n",
-    "THis could mean that hospitals are offsetting the cost of higher-risk patients by charging more for perscriptions"
+    "This could mean that hospitals are offsetting the cost of higher-risk patients by charging more for perscriptions of NON-SNP clients."
    ]
   }
  ],
