--- a/notebooks/outlier_detection.ipynb
+++ b/notebooks/outlier_detection.ipynb
@@ -1927,14 +1927,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function combined_outlier_methods at 0x0000017960C79A80>\n"
+      "<function combined_outlier_methods at 0x125628ea0>\n"
      ]
     }
    ],
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1960,10 +1960,10 @@
      "evalue": "'function' object is not subscriptable",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n\u001b[1;32m----> 2\u001b[0m scaled_common_outliers \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(\u001b[43mcommon_elements_df\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkept_features\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      3\u001b[0m scaled_common_outliers_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(scaled_common_outliers, columns\u001b[38;5;241m=\u001b[39mkept_features)\n\u001b[0;32m      4\u001b[0m common_elements_data \u001b[38;5;241m=\u001b[39m scaled_common_outliers_df[kept_features]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'function' object is not subscriptable"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[96]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m scaler = StandardScaler()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m scaled_common_outliers = scaler.fit_transform(\u001b[43mcommon_elements_df\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkept_features\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[32m      3\u001b[39m scaled_common_outliers_df = pd.DataFrame(scaled_common_outliers, columns=kept_features)\n\u001b[32m      4\u001b[39m common_elements_data = scaled_common_outliers_df[kept_features]\n",
+      "\u001b[31mTypeError\u001b[39m: 'function' object is not subscriptable"
      ]
     }
    ],
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2277,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2628,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2955,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3018,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3050,7 +3050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3079,7 +3079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3130,7 +3130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3146,7 +3146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3184,7 +3184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3216,7 +3216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3241,7 +3241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3275,7 +3275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3394,7 +3394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3420,7 +3420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3530,7 +3530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3540,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3850,7 +3850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4172,7 +4172,7 @@
     "Things noticed:  \n",
     "NON-SNP clients have a significantly higher rx average (56k) compared to D-SNP clients (22k) and their rx_to_premium ratio is 3.6 vs 1.1, respectively.\n",
     "\n",
-    "This could mean that hospitals are offsetting the cost of higher-risk patients by charging more for perscriptions of NON-SNP clients."
+    "This could mean that hospitals are offsetting the cost of higher-risk patients by charging more for perscriptions."
    ]
   }
  ],
