added to table of contents

--- a/notebooks/outlier_detection.ipynb
+++ b/notebooks/outlier_detection.ipynb
@@ -19,7 +19,8 @@
     "3. [Exploratory Data Analysis](#exploratory-data-analysis)\n",
     "4. [Feature Selection](#feature-selection)\n",
     "5. [Outlier Detection](#outliers-detection)\n",
-    "6. [Results](#results)"
+    "6. [Results](#results)\n",
+    "7. [LOF+ISO Focus](#lof-and-isolation-forest)"
    ]
   },
   {
@@ -2105,7 +2106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scatter Plot Visualizations"
+    "# LOF and Isolation Forest"
    ]
   },
   {
